# kami-backend

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
kami/: manage.py
kami/kami/: asgi.py  settings.py  urls.py  wsgi.py
kami/kamiapi/: apps.py  factories.py  models.py  serializers.py  urls.py  views.py
kami/kamiapi/business_logic/: entities.py  services.py
kami/kamiapi/migrations/: 0001_initial.py  0002_alter_airplane_name_alter_airplane_unique_together.py
kami/kamiapi/tests/: tests_services.py  tests_views.py
